--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tw-cheat-sheet",
+  "name": "@99darwin/tw-essentials",
   "version": "1.0.0",
-  "description": "Your friendly neighborhood Tailwind component library - because writing components twice is once too many",
+  "description": "Essential Tailwind components for React - because writing components twice is once too many",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
@@ -41,14 +41,14 @@
     "@radix-ui/react-radio-group": "^1.3.6",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-tooltip": "^1.2.6",
+    "@uploadthing/react": "^7.3.0",
     "lucide-react": "^0.508.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0",
     "react-dropzone": "^14.3.8",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^7.6.0",
-    "@uploadthing/react": "^7.3.0"
+    "uploadthing": "^7.6.0"
   },
   "peerDependencies": {
     "react": "^18.0.0 || ^19.0.0",
@@ -59,7 +59,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
-    "typescript": "^5",
-    "tsup": "^8.0.0"
+    "tsup": "^8.4.0",
+    "typescript": "^5"
   }
 }
