--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,24 +5,22 @@
       "allowJs": true,
       "skipLibCheck": true,
       "strict": true,
-      "noEmit": true,
+      "forceConsistentCasingInFileNames": true,
       "esModuleInterop": true,
       "module": "esnext",
-      "moduleResolution": "bundler",
+      "moduleResolution": "node",
       "resolveJsonModule": true,
       "isolatedModules": true,
-      "jsx": "preserve",
-      "incremental": true,
-      "plugins": [
-        {
-          "name": "next"
-        }
-      ],
+      "jsx": "react-jsx",
+      "declaration": true,
+      "declarationDir": "dist",
+      "emitDeclarationOnly": true,
+      "baseUrl": ".",
       "paths": {
         "@/*": ["./src/*"]
       }
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-    "exclude": ["node_modules"]
+    "include": ["src/**/*.ts", "src/**/*.tsx"],
+    "exclude": ["node_modules", "dist"]
   }
   
