--- a/package.json
+++ b/package.json
@@ -35,17 +35,23 @@
   "dependencies": {
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-avatar": "^1.1.9",
+    "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-popover": "^1.1.13",
     "@radix-ui/react-radio-group": "^1.3.6",
     "@radix-ui/react-select": "^2.2.4",
+    "@radix-ui/react-slider": "^1.3.4",
     "@radix-ui/react-tooltip": "^1.2.6",
     "@uploadthing/react": "^7.3.0",
+    "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.508.0",
     "react": "^18.0.0 || ^19.0.0",
     "react-dom": "^18.0.0 || ^19.0.0",
     "react-dropzone": "^14.3.8",
+    "recharts": "^2.15.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.6.0"
